--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "webpack --mode production --config webpack/webpack.prod.js"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
+    "reso-ui": "^1.12.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
