--- a/package.json
+++ b/package.json
@@ -3,29 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "webpack serve --mode development --config webpack/webpack.dev.js --hot",
-    "build": "webpack --mode production --config webpack/webpack.prod.js"
+    "start": "cross-env NODE_ENV=development webpack serve --mode development --config webpack/webpack.dev.js --hot",
+    "build": "cross-env NODE_ENV=production webpack --mode production --config webpack/webpack.prod.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
-    "classnames": "^2.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
+    "axios": "^1.6.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.22.1",
-    "reso-ui": "^1.12.1"
+    "reso-ui": "^1.12.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.82",
-    "@types/react": "^18.2.57",
+    "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "classnames": "^2.5.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
