--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --mode development --config webpack/webpack.dev.js --hot",
-    "build": "cross-env NODE_ENV=production webpack --mode production --config webpack/webpack.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --mode production --config webpack/webpack.prod.js",
+    "lint": "eslint \"src/**\""
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
@@ -29,8 +30,18 @@
     "classnames": "^2.5.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "^3.2.5",
     "sass": "^1.71.0",
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
