--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --mode development --config webpack/webpack.dev.js --hot",
     "build": "cross-env NODE_ENV=production webpack --mode production --config webpack/webpack.prod.js",
-    "lint": "eslint \"src/**\""
+    "lint": "eslint \"src/**\"",
+    "test": "cross-env NODE_ENV=test jest",
+    "test-coverage": "cross-env NODE_ENV=test jest --coverage",
+    "test:watch": "cross-env NODE_ENV=test jest --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
@@ -14,12 +17,13 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "reso-ui": "^2.0.0"
+    "reso-ui": "^2.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,6 +31,8 @@
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "classnames": "^2.5.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
@@ -37,14 +43,15 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.5",
     "sass": "^1.71.0",
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
     "webpack": "^5.90.3",
