--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "reso-ui": "^2.0.2"
+    "reso-ui": "^2.0.2",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
@@ -31,6 +32,7 @@
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "classnames": "^2.5.1",
