--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
   },
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-var-requires": "warn"
   }
 }
