--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "React App Example",
+  "name": "React App Starter",
   "icons": [
     {
       "src": "favicon.ico",
