--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "reso-ui": "^2.0.2",
@@ -34,6 +35,7 @@
     "@types/node": "^16.18.82",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "@types/react-helmet": "^6.1.11",
     "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
