--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "copy-webpack-plugin": "^12.0.2",
+    "i18next": "^23.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^14.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "reso-ui": "^2.0.2",
