--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "i18next": "^23.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-i18next": "^14.1.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "reso-ui": "^2.0.2",
+    "reso-ui": "^2.0.4",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
